@@ -1,4 +1,4 @@
-/* Generated by re2c 0.11.2 on Tue Mar 27 08:13:17 2007 */
+/* Generated by re2c 0.12.0 on Sat May 19 16:23:33 2007 */
 #line 1 "strict_cpp.re"
 /*=============================================================================
     Boost.Wave: A Standard compliant C++ preprocessor library
